--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package-edit/ba-manage-package-edit.component.html
@@ -20,16 +20,7 @@
       <div class="tab-pane fade show active" id="package-view" role="tabpanel">
         <div class="row">
           <div class="row g-2 g-md-3 gallery" data-thumbnails="true" style="min-width: 30rem;">
-            <!--<div class="col-8"><a class="gallery-item rounded rounded-md-3" href="./asset/img/catalog/01.jpg"-->
-            <!--data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Kids bed&lt;/h6&gt;"><img-->
-            <!--src="./asset/img/catalog/01.jpg" alt="Gallery thumbnail"></a></div>-->
-            <!--<div class="col-4"><a class="gallery-item rounded rounded-md-3 mb-2 mb-md-3"-->
-            <!--href="./asset/img/catalog/02.jpg"-->
-            <!--data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Kids bed&lt;/h6&gt;"><img-->
-            <!--src="./asset/img/catalog/02.jpg" alt="Gallery thumbnail"></a>-->
-            <!--<a class="gallery-item rounded rounded-md-3" href="./asset/img/catalog/03.jpg"-->
-            <!--data-sub-html="&lt;h6 class=&quot;fs-sm text-light&quot;&gt;Working desk&lt;/h6&gt;"><img-->
-            <!--src="./asset/img/catalog/03.jpg" alt="Gallery thumbnail"></a></div>-->
+
             <div class="col-12" *ngIf="_album?.length > 0">
               <div class="row g-2 g-md-3 gallery" style="min-width: 30rem;">
 
@@ -463,6 +454,14 @@
                    data-bs-original-title="You can add items for this pakage."
                    aria-label="You can add items for this pakage."><i class="fi-help"></i>
                 </a>
+                <a data-bs-toggle="offcanvas"
+                   data-bs-target="#packageOnlyItem-viewer"
+                   class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-3 fw-bold"
+                   title="You can create new feature." data-bs-original-title="You can create new package only item."
+                   aria-label="You can create new package only item." style="padding-left: 20px;padding-top: 4px"
+                   (click)="setItemsToItemAdd(packageItem.packageItemItems)">Create
+                  Item
+                </a>
                 <!--<form #baManageFormPackageItemExs="ngForm" (ngSubmit)="baManageFormPackageItemExs.form.valid && addItem()"-->
                 <!--novalidate>-->
 
@@ -474,11 +473,11 @@
                         bindLabel="name"
                         placeholder="Select Item"
                         dropdownPosition="auto"
-                        [multiple]="true"
+                        [multiple]="false"
                         [searchWhileComposing]="true"
-                        name="items"
-                        #itemsE="ngModel" required
-                        [(ngModel)]="packageItem.packageItemItems"
+                        name="packageItemItems"
+                        #itemsE="ngModel"
+                        [(ngModel)]="selectedPackageItem"
                         style="width: 100%">
                       </ng-select>
                     </div>
@@ -487,18 +486,117 @@
                       class="validErr">
                       Item is required
                     </div>
+
+                    <div class="row" style="margin-top: 10px">
+                      <div class="col-sm-12 col-md-6 col-xl-6"
+                           *ngFor="let packageItemItem of packageItem.packageItemItems;let j=index">
+                        <div class="card shadow-sm card-hover border-0 h-100" *ngIf="packageItemItem.item!==undefined">
+                          <div class="tns-carousel-wrapper card-img-top card-img-hover"
+                               style="background-color: rgba(0,0,0,0.25)">
+                            <a class="img-overlay"></a>
+                            <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
+                              class="d-table badge bg-primary cursor-point"><h4
+                              class="h6 text-light fs-sm" style="margin-bottom: 0px;"><i
+                              class="fi-star fs-sm"></i> 4.5 / 5</h4></span>
+
+                              <i class="fi-trash"
+                                 style="color: red;padding: 5px;background-color: white;border-radius: 10px;cursor: pointer;font-size: 15px;"
+                                 (click)="packageItem.packageItemItems.splice(j,1)"></i>
+                            </div>
+
+                            <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
+                              <mdb-carousel-item
+                                *ngFor="let image of packageItemItem.item.itemPackage.itemPackageImages">
+                                <span
+                                  style="height: 100%;width: 100%;background-color: rgba(0,0,0,0.25);position: absolute"></span>
+                                <img style="max-height:200px;height: 200px" class="d-block w-100"
+                                     [src]="getImageSrc(image)"
+                                     alt="First slide">
+                              </mdb-carousel-item>
+                            </mdb-carousel>
+
+                          </div>
+                          <div class="card-body position-relative pb-3">
+
+                            <!-- <h4 class="mb-1 fs-xs fw-normal text-uppercase text-primary fw-bold">Not Available</h4> -->
+                            <h3 class="h6 mb-2 fs-base">
+                              <a class="nav-link"
+                                 (click)="getItemPackageSelected(packageItem,packageItemItem.item)"
+                                 style="font-weight: bold;padding: 0px">{{packageItemItem.item.itemPackage.name}}</a>
+                            </h3>
+                            <!-- <div class="d-flex align-items-center text-nowrap">
+                              <p class="mb-2 fs-sm text-muted">Quantity </p>
+                              <p class="mb-2 fs-sm text-primary fw-bold mx-2"> 250g</p>
+                            </div> -->
+                            <div class="row g-2">
+
+                            </div>
+                            <!--<div class="row cols-sm-2 row-cols-md-12"-->
+                            <!--style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 10px;margin-bottom: 10px">-->
+                            <!--<div class="col" style="padding: 0px">-->
+                            <!--<div style="border-right: 1px solid #d3d3d3">-->
+                            <!--<p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">-->
+                            <!--Quantity </p>-->
+                            <!--<p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">-->
+                            <!--{{packageItemItem.item.itemPackage.quantity}}</p>-->
+                            <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="col" style="padding: 0px">-->
+                            <!--<p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">-->
+                            <!--Discount </p>-->
+                            <!--<p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">-->
+                            <!--{{packageItemItem.item.itemPackage.discountType==='None' ? 'N/A' :-->
+                            <!--packageItemItem.item.itemPackage.discountType==='Cash' ? ('LKR '+packageItemItem.item.itemPackage.discount) :-->
+                            <!--packageItemItem.item.itemPackage.discountType==='Percentage' ? (packageItemItem.item.itemPackage.discount + '%') : ''}}-->
+                            <!--</p>-->
+                            <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='None'" class="mb-2 fs-sm text-primary fw-bold">N/A</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='Cash'" class="mb-2 fs-sm text-primary fw-bold">{{"LKR " + item.itemDiscount}}</p>&ndash;&gt;-->
+                            <!--&lt;!&ndash;<p *ngIf="item.itemDiscountType==='Percentage'" class="mb-2 fs-sm text-primary fw-bold">{{item.itemDiscount + "%"}}</p>&ndash;&gt;-->
+                            <!--</div>-->
+                            <!--</div>-->
+                            <!--<div class="fw-bold">-->
+                            <!--<i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>-->
+                            <!--<span *ngIf="packageItemItem.item.itemPackage.discountType==='None'">LKR {{packageItemItem.item.itemPackage.price | number:'.2-2'}}</span>-->
+                            <!--<span *ngIf="packageItemItem.item.itemPackage.discountType!=='None'"-->
+                            <!--style="text-decoration: line-through;color: red">LKR {{packageItemItem.item.itemPackage.price | number:'.2-2'}}</span>-->
+                            <!--<span *ngIf="packageItemItem.item.itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{packageItemItem.item.itemPackage.discountedPrice | number:'.2-2'}}</span>-->
+                            <!--</div>-->
+                          </div>
+                          <!--<div class="card-footer d-flex align-items-center justify-content-center mx-3 pt-3 text-nowrap">-->
+                          <!--<div class="form-check form-switch">-->
+                          <!--<input class="form-check-input" type="checkbox" [checked]="itemItemPackage.item.available"-->
+                          <!--(click)="setItemPackageAvailable(item)">-->
+                          <!--<label *ngIf="!itemItemPackage.item.available"-->
+                          <!--class="form-check-label fs-xs fw-normal text-uppercase text-primary fw-bold">-->
+                          <!--Not Available</label>-->
+                          <!--<label *ngIf="itemItemPackage.item.available" class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">-->
+                          <!--Available</label>-->
+                          <!--</div>-->
+                          <!--&lt;!&ndash;<div class="form-check form-switch" *ngIf="item.itemAvailable">&ndash;&gt;-->
+                          <!--&lt;!&ndash;<input class="form-check-input" type="checkbox" checked>&ndash;&gt;-->
+                          <!--&lt;!&ndash;<label class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">&ndash;&gt;-->
+                          <!--&lt;!&ndash;Available</label>&ndash;&gt;-->
+                          <!--&lt;!&ndash;</div>&ndash;&gt;-->
+                          <!--</div>-->
+                        </div>
+                      </div>
+                    </div>
                     <!--<div style="color: blue;padding-left: 10px;padding-top: 5px">-->
                     <!--Add new feature-->
                     <!--</div>-->
                   </div>
-                  <!-- <div class="invalid-tooltip">
-                    Please fill item quantity
-                  </div>
-                  <div class="valid-tooltip">Looks good!</div> -->
                   <!--<button style="margin-left: 10px" type="submit"-->
                   <!--class="btn btn-light-primary btn-icon shadow-sm">-->
                   <!--<i class="fi-plus"></i>-->
                   <!--</button>-->
+                  <!-- <div class="invalid-tooltip">
+                    Please fill item quantity
+                  </div>
+                  <div class="valid-tooltip">Looks good!</div> -->
+                  <button style="margin-left: 10px" (click)="addPackageItem()"
+                          class="btn btn-light-primary btn-icon shadow-sm">
+                    <i class="fi-plus"></i>
+                  </button>
                   <!-- <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> -->
                 </div>
                 <!--</form>-->
